--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "^3.0",
+        "filament/actions": "^3.3",
+        "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
+        "pxlrbt/filament-excel": "^2.5",
+        "rap2hpoutre/fast-excel": "^5.6",
         "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
